--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width , initial-scale=1">
-    <title>Test navigation</title>
+    <title>My Webpage</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <div class="container">
+        <div class="main-container">
             <nav>
-                <h1 class="brand"><a href="index.html">DesignBoost</a></h1>
+                <h1 class="brand"><a href="index.html" id="mainn">DesignBoost</a></h1>
                 <ul>
                     <li>HOME</li>
                     <li>ABOUT</li>
@@ -41,6 +45,35 @@
             </div>
         </div>
     </div>
+    <div class="round-options">
+        <p class="all-para">round-options</p>
+    </div>
+
+    <div class="square-options">
+        <p class="all-para">square-options</p>
+    </div>
+
+    <div class="what-do-wedo">
+        <p class="all-para">what-do-wedo</p>
+    </div>
+
+    <div class="more">
+        <p class="all-para">more</p>
+    </div>
+
+    <div class="social-media">
+        <p class="all-para">social-media</p>
+    </div>
+
+    <div class="contact">
+        <p class="all-para">contact</p>
+    </div>
+
+    <div class="end">
+        <p class="all-para">end</p>
+    </div>
+
+
 </body>
 
 </html>
