--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width , initial-scale=1">
     <title>My Webpage</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -45,8 +41,20 @@
             </div>
         </div>
     </div>
+
     <div class="round-options">
-        <p class="all-para">round-options</p>
+        <div class="rnd-boxes">
+            <div id="rnd-1">
+                <img src="header.jpeg" id="rnd-1-img">
+                <h1>rivers in bangladesh</h1>
+                <p>Bangladesh is a riverine country. 
+                    About 230 rivers currently flow in Bangladesh. 
+                </p>
+            </div>
+            <div id="rnd-2">2</div>
+            <div id="rnd-3">3</div>
+            <div id="rnd-4">4</div>
+        </div>
     </div>
 
     <div class="square-options">
@@ -70,7 +78,8 @@
     </div>
 
     <div class="end">
-        <p class="all-para">end</p>
+        <p id="lft">2013-DESIGN BOOST PREMIUM THEME</p>
+        <p>BY BEKZAT SAVIKOV FOR THEMEFOREST</p>
     </div>
 
 
