--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width , initial-scale=1">
     <title>My Webpage</title>
+    <link rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -43,30 +45,112 @@
     </div>
 
     <div class="round-options">
-        <div class="rnd-boxes">
-            <div id="rnd-1">
-                <img src="header.jpeg" id="rnd-1-img">
-                <h1>rivers in bangladesh</h1>
-                <p>Bangladesh is a riverine country. 
-                    About 230 rivers currently flow in Bangladesh. 
+        <div class="boxes">
+            <div class="rnd-1">
+                <img src="header.jpeg" class="rnd-1-img">
+                <h1>Rivers in Bangladesh</h1>
+                <p class="para">Bangladesh is a riverine country. 
+                    About 230 rivers currently flow in Bangladesh.
+                    There is plenty of fish in those rivers.
                 </p>
             </div>
-            <div id="rnd-2">2</div>
-            <div id="rnd-3">3</div>
-            <div id="rnd-4">4</div>
+            <div class="rnd-1">
+                <img src="header.jpeg" class="rnd-1-img">
+                <h1>Rivers in Bangladesh</h1>
+                <p class="para">Bangladesh is a riverine country. 
+                    About 230 rivers currently flow in Bangladesh.
+                    There is plenty of fish in those rivers.
+                </p>
+            </div>
+            <div class="rnd-1">
+                <img src="header.jpeg" class="rnd-1-img">
+                <h1>Rivers in Bangladesh</h1>
+                <p class="para">Bangladesh is a riverine country. 
+                    About 230 rivers currently flow in Bangladesh.
+                    There is plenty of fish in those rivers.
+                </p>
+            </div>
+            <div class="rnd-1">
+                <img src="header.jpeg" class="rnd-1-img">
+                <h1>Rivers in Bangladesh</h1>
+                <p class="para">Bangladesh is a riverine country. 
+                    About 230 rivers currently flow in Bangladesh.
+                    There is plenty of fish in those rivers.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="sqr-heading">
+        <div class="boxes-heading">
+            <div style="display: flex;margin-left: 2vw;">
+                <h1>Recent Projects</h1>
+                <p style="font-weight: bold;color: rgb(130, 210, 210);margin-left: 1vw;margin-top: 1.3vh;">VIEW ALL WORKS</p>
+            </div>
+            <div style="display: flex;margin-right: 2vw;">
+                <div class="nxt">
+                    <i class="fa fa-chevron-left" 
+                        style="font-size:24px;color:white;margin-left: 5px;margin-top: 3px;"></i>
+                </div>
+                <div class="nxt">
+                    <i class="fa fa-chevron-right"
+                    style="font-size:24px;color:white;margin-left: 8px;margin-top: 3px;"></i>
+                </div>    
+            </div>
         </div>
     </div>
 
     <div class="square-options">
-        <p class="all-para">square-options</p>
+        <div class="boxes">
+            <div class="sqr">
+                <img src="header.jpeg" class="sqr-img">
+                <h1 style="color: rgb(130, 210, 210);">Rivers in Bangladesh</h1>
+                <p style="margin-top: 8px;">
+                    Small paragraph.
+                </p>
+            </div>
+            <div class="sqr">
+                <img src="header.jpeg" class="sqr-img">
+                <h1 style="color: rgb(130, 210, 210);">Rivers in Bangladesh</h1>
+                <p style="margin-top: 8px;">
+                    Small paragraph.
+                </p>
+            </div>
+            <div class="sqr">
+                <img src="header.jpeg" class="sqr-img">
+                <h1 style="color: rgb(130, 210, 210);">Rivers in Bangladesh</h1>
+                <p style="margin-top: 8px;">
+                    Small paragraph.
+                </p>
+            </div>
+        </div>
     </div>
 
     <div class="what-do-wedo">
-        <p class="all-para">what-do-wedo</p>
+    </div>
+
+    <div class="sqr-heading">
+        <div class="boxes-heading">
+            <div style="display: flex;margin-left: 2vw;">
+                <h1>Blog Updates</h1>
+                <p style="font-weight: bold;color: rgb(130, 210, 210);margin-left: 1vw;margin-top: 1.3vh;">
+                    VISIT OUT BLOGS
+                </p>
+            </div>
+            <div style="display: flex;margin-right: 2vw;">
+                <div class="nxt">
+                    <i class="fa fa-chevron-left" 
+                        style="font-size:24px;color:white;margin-left: 5px;margin-top: 3px;"></i>
+                </div>
+                <div class="nxt">
+                    <i class="fa fa-chevron-right"
+                    style="font-size:24px;color:white;margin-left: 8px;margin-top: 3px;"></i>
+                </div>    
+            </div>
+        </div>
     </div>
 
     <div class="more">
-        <p class="all-para">more</p>
     </div>
 
     <div class="social-media">
