--- a/index.html
+++ b/index.html
@@ -11,21 +11,19 @@
 </head>
 
 <body>
-    <header>
-        <div class="main-container">
-            <nav>
-                <h1 class="brand"><a href="index.html" id="mainn">DesignBoost</a></h1>
-                <ul>
-                    <li>HOME</li>
-                    <li>ABOUT</li>
-                    <li>PORTFOLIO</li>
-                    <li>OUR BLOG</li>
-                    <li>SERVICES</li>
-                    <li>CONTACT</li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div class="main-container">
+        <nav>
+            <h1 class="brand"><a href="index.html" id="mainn">DesignBoost</a></h1>
+            <ul>
+                <li>HOME</li>
+                <li>ABOUT</li>
+                <li>PORTFOLIO</li>
+                <li>OUR BLOG</li>
+                <li>SERVICES</li>
+                <li>CONTACT</li>
+            </ul>
+        </nav>
+    </div>
     <div class="base">
         <div class="slide">
             <!----<p id="par">Hello World</p>-->
@@ -43,7 +41,7 @@
             </div>
         </div>
     </div>
-
+    1
     <div class="round-options">
         <div class="boxes">
             <div class="rnd-1">
@@ -126,7 +124,85 @@
         </div>
     </div>
 
+    <div class="what-heading">
+        <div class="hed-content">
+            <p id="hed">We Make Website People Love</p>
+            <p id="hed-p">What We Do to Make Our Client Happy</p>
+        </div>
+    </div>
+
     <div class="what-do-wedo">
+        <div class="what-content">
+            <div class="hor-sec">
+                <div class="ver-sec">
+                    <div class="phone-ic">
+                            <i class="fa fa-mobile-phone" 
+                            style="font-size:108px;color:rgb(130, 210, 193);"></i>
+                    </div>
+                    <div class="ver-con">
+                        <h1 style="font-weight: bold;color: rgb(130, 210, 193);">
+                            Digital Strategy
+                        </h1>
+                        <p style="color: rgb(100, 100, 100);line-height: 150%;">A river is a natural flowing watercourse,
+                             usually freshwater, flowing towards an 
+                             ocean, sea, lake or another river. In some
+                              cases a river flows into the ground and becomes dry 
+                        </p>
+                    </div>     
+                </div>
+                <div class="ver-sec">
+                        <div class="phone-ic">
+                                <i class="fa fa-mobile-phone" 
+                                style="font-size:108px;color:rgb(130, 210, 193);"></i>
+                        </div>
+                        <div class="ver-con">
+                            <h1 style="font-weight: bold;color: rgb(130, 210, 193);">
+                                Digital Strategy
+                            </h1>
+                            <p style="color: rgb(100, 100, 100);line-height: 150%;">A river is a natural flowing watercourse,
+                                 usually freshwater, flowing towards an 
+                                 ocean, sea, lake or another river. In some
+                                  cases a river flows into the ground and becomes dry 
+                            </p>
+                        </div> 
+                </div>
+            </div>
+            <div class="hor-sec">
+                <div class="ver-sec">
+                        <div class="phone-ic">
+                                <i class="fa fa-mobile-phone" 
+                                style="font-size:108px;color:rgb(130, 210, 193);"></i>
+                        </div>
+                        <div class="ver-con">
+                            <h1 style="font-weight: bold;color: rgb(130, 210, 193);">
+                                Digital Strategy
+                            </h1>
+                            <p style="color: rgb(100, 100, 100);line-height: 150%;">A river is a natural flowing watercourse,
+                                 usually freshwater, flowing towards an 
+                                 ocean, sea, lake or another river. In some
+                                  cases a river flows into the ground and becomes dry 
+                            </p>
+                        </div>                 
+                            
+                </div>
+                <div class="ver-sec">
+                        <div class="phone-ic">
+                                <i class="fa fa-mobile-phone" 
+                                style="font-size:108px;color:rgb(130, 210, 193);"></i>
+                        </div>
+                        <div class="ver-con">
+                            <h1 style="font-weight: bold;color: rgb(130, 210, 193);">
+                                Digital Strategy
+                            </h1>
+                            <p style="color: rgb(100, 100, 100);line-height: 150%;">A river is a natural flowing watercourse,
+                                 usually freshwater, flowing towards an 
+                                 ocean, sea, lake or another river. In some
+                                  cases a river flows into the ground and becomes dry 
+                            </p>
+                        </div>                             
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="sqr-heading">
@@ -151,14 +227,42 @@
     </div>
 
     <div class="more">
+
     </div>
 
     <div class="social-media">
-        <p class="all-para">social-media</p>
+        <div class="mda-content">
+            <div class="fst">
+                <i class="fa fa-twitter"
+                style="font-size:48px;color:white;padding-right: 2vw;"></i>
+                <p>A river is a natural flowing watercourse,
+                        usually freshwater, flowing towards an 
+                        ocean, sea, lake or another river. In some
+                         cases a river flows into the ground and becomes dry.
+                </p>
+            </div>
+            <div class="lstt">
+                <div style="height: 3.2vh;width: 2vw;background-color: rgb(130, 198, 210);">
+                    <i class="fa fa-twitter"
+                        style="font-size:24px;color:white;margin-left: .3vw;margin-top: .5vh;"></i>
+                </div>  
+                <div style="height: 3.2vh;width: 2vw;background-color: rgb(130, 198, 210);">
+                        <i class="fa fa-twitter"
+                        style="font-size:24px;color:white;margin-left: .3vw;margin-top: .5vh;"></i>
+                </div> 
+                <div style="height: 3.2vh;width: 2vw;background-color: rgb(130, 198, 210);">
+                        <i class="fa fa-twitter"
+                        style="font-size:24px;color:white;margin-left: .3vw;margin-top: .5vh;"></i>
+                </div> 
+                <div style="height: 3.2vh;width: 2vw;background-color: rgb(130, 198, 210);">
+                        <i class="fa fa-twitter"
+                        style="font-size:24px;color:white;margin-left: .3vw;margin-top: .5vh;"></i>
+                </div>                   
+            </div>
+        </div>
     </div>
 
     <div class="contact">
-        <p class="all-para">contact</p>
     </div>
 
     <div class="end">
