--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h1>Rivers in Bangladesh</h1>
                 <p class="para">Bangladesh is a riverine country. 
                     About 230 rivers currently flow in Bangladesh.
-                    There is plenty of fish in those rivers.
+                    There is plenty of fish in those rivers. 
                 </p>
             </div>
             <div class="rnd-1">
@@ -140,7 +140,7 @@
                             style="font-size:108px;color:rgb(130, 210, 193);"></i>
                     </div>
                     <div class="ver-con">
-                        <h1 style="font-weight: bold;color: rgb(130, 210, 193);">
+                        <h1 style="font-weight: bold;color: rgb(130, 210, 193); line-height: 200%">
                             Digital Strategy
                         </h1>
                         <p style="color: rgb(100, 100, 100);line-height: 150%;">A river is a natural flowing watercourse,
@@ -156,7 +156,7 @@
                                 style="font-size:108px;color:rgb(130, 210, 193);"></i>
                         </div>
                         <div class="ver-con">
-                            <h1 style="font-weight: bold;color: rgb(130, 210, 193);">
+                            <h1 style="font-weight: bold;color: rgb(130, 210, 193);line-height: 200%">
                                 Digital Strategy
                             </h1>
                             <p style="color: rgb(100, 100, 100);line-height: 150%;">A river is a natural flowing watercourse,
@@ -174,7 +174,7 @@
                                 style="font-size:108px;color:rgb(130, 210, 193);"></i>
                         </div>
                         <div class="ver-con">
-                            <h1 style="font-weight: bold;color: rgb(130, 210, 193);">
+                            <h1 style="font-weight: bold;color: rgb(130, 210, 193);line-height: 200%">
                                 Digital Strategy
                             </h1>
                             <p style="color: rgb(100, 100, 100);line-height: 150%;">A river is a natural flowing watercourse,
@@ -191,7 +191,7 @@
                                 style="font-size:108px;color:rgb(130, 210, 193);"></i>
                         </div>
                         <div class="ver-con">
-                            <h1 style="font-weight: bold;color: rgb(130, 210, 193);">
+                            <h1 style="font-weight: bold;color: rgb(130, 210, 193);line-height: 200%">
                                 Digital Strategy
                             </h1>
                             <p style="color: rgb(100, 100, 100);line-height: 150%;">A river is a natural flowing watercourse,
@@ -227,7 +227,68 @@
     </div>
 
     <div class="more">
+        <div class="hor-sec">
+            <div class="more1">
+                <img src="header.jpeg" class="sqr-img1">
+                <div style="margin-top: 20px;">
+                    <div class="date-time">
+                        <div>
+                            <div class="dte">
+                                <p style="font-size: 16px;">SEP</p>
+                            </div>
+                            <div class="tme">
+                                <p style="font-size: 36px;">20</p>
+                            </div>
+                        </div>
+                        <div class="rst">
+                            <div class="btn">
+                                <p style="font-size: 16px;">DESIGN</p>
+                            </div>
+                            <div class="prr">
+                                <p style="font-size: 16px;">POSTED BY <span style="color: rgb(130, 210, 210);">ADMIN</span></p>
+                            </div>
+                        </div>
+                    </div>
+                    <h1 style="color: rgb(130, 210, 210);">A river is a natural flowing watercourse</h1>
+                    <p class="para">A river is a natural flowing watercourse,
+                                usually freshwater, flowing towards an 
+                                ocean, sea, lake or another river. In some
+                                 cases a river flows into the ground and becomes dry.
+                    </p>
+                </div>
+            </div>
+            <div class="more1">
+                <img src="header.jpeg" class="sqr-img1">
+                <div style="margin-top: 20px;">
+                    <div class="date-time">
+                            <div>
+                                    <div class="dte">
+                                        <p style="font-size: 16px;">AUG</p>
+                                    </div>
+                                    <div class="tme">
+                                        <p style="font-size: 36px;margin-left: auto;margin-right: auto;">10</p>
+                                    </div>
+                            </div>
 
+                            <div class="rst">
+                                    <div class="btn">
+                                        <p style="font-size: 16px;">DESIGN</p>
+                                    </div>
+                                    <div class="prr">
+                                        <p style="font-size: 16px;">POSTED BY <span style="color: rgb(130, 210, 210);">ADMIN</span></p>
+                                    </div>
+                                </div>
+
+                    </div>
+                    <h1 style="color: rgb(130, 210, 210);">A river is a natural flowing watercourse</h1>
+                    <p class="para">A river is a natural flowing watercourse,
+                                usually freshwater, flowing towards an 
+                                ocean, sea, lake or another river. In some
+                                 cases a river flows into the ground and becomes dry.
+                    </p>
+                </div>
+            </div>
+        </div>       
     </div>
 
     <div class="social-media">
@@ -242,27 +303,65 @@
                 </p>
             </div>
             <div class="lstt">
-                <div style="height: 3.2vh;width: 2vw;background-color: rgb(130, 198, 210);">
+                <div style="overflow: hidden;padding: 5px;background-color: rgb(130, 198, 210);">
                     <i class="fa fa-twitter"
-                        style="font-size:24px;color:white;margin-left: .3vw;margin-top: .5vh;"></i>
+                        style="font-size:24px;color:white;"></i>
                 </div>  
-                <div style="height: 3.2vh;width: 2vw;background-color: rgb(130, 198, 210);">
+                <div style="overflow: hidden;padding: 5px;background-color: rgb(130, 198, 210);">
                         <i class="fa fa-twitter"
-                        style="font-size:24px;color:white;margin-left: .3vw;margin-top: .5vh;"></i>
+                        style="font-size:24px;color:white;"></i>
                 </div> 
-                <div style="height: 3.2vh;width: 2vw;background-color: rgb(130, 198, 210);">
+                <div style="overflow: hidden;padding: 5px;background-color: rgb(130, 198, 210);">
                         <i class="fa fa-twitter"
-                        style="font-size:24px;color:white;margin-left: .3vw;margin-top: .5vh;"></i>
+                        style="font-size:24px;color:white;"></i>
                 </div> 
-                <div style="height: 3.2vh;width: 2vw;background-color: rgb(130, 198, 210);">
+                <div style="overflow: hidden;padding: 5px;background-color: rgb(130, 198, 210);">
                         <i class="fa fa-twitter"
-                        style="font-size:24px;color:white;margin-left: .3vw;margin-top: .5vh;"></i>
+                        style="font-size:24px;color:white;"></i>
                 </div>                   
             </div>
         </div>
     </div>
 
     <div class="contact">
+        <div class="contact-content">
+            <div class="con-par">
+                <h1 style="color: rgb(255, 102, 0); line-height: 200%;">ABOUT DESIGNBOOST</h1>
+                <p><br>A river is a natural flowing watercourse,
+                    usually freshwater, flowing towards an 
+                    ocean, sea, lake or another river. In some
+                     cases a river flows into the ground and becomes dry.
+                     <br><br>
+                     A river is a natural flowing watercourse,
+                        usually freshwater, flowing towards an 
+                        ocean, sea, lake or another river. In some
+                         cases a river flows into the ground and becomes dry.</p>
+            </div>
+            <div class="con-par">
+                    <h1 style="color: rgb(255, 102, 0); line-height: 200%;">CONTACT US</h1>
+                    <p><br>A river is a natural flowing watercourse,
+                        usually freshwater, flowing towards an 
+                        ocean, sea, lake or another river. 
+                         <br><br>
+                          In some cases a river flows into the ground and becomes dry.
+                          <br><br>
+                          +880 164 735 466
+                        </p>
+               
+            </div>
+            <div class="con-par">
+                <h1 style="color: rgb(255, 102, 0); line-height: 200%;">NEWSLETTER</h1>
+                <p><br>A river is a natural flowing watercourse,
+                    usually freshwater, flowing towards an 
+                    ocean, sea, lake or another river. 
+                     <br><br></p>
+                     <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                     <input type="text" id="fname1" name="name" placeholder="Your email..">
+
+                     <input type="submit" value="SIGN UP">
+
+            </div>
+        </div>
     </div>
 
     <div class="end">
