--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="main-container">
         <nav>
-            <h1 class="brand"><a href="index.html" id="mainn">DesignBoost</a></h1>
+            <h1><a href="index.html" id="mainn">DesignBoost</a></h1>
             <ul>
                 <li>HOME</li>
                 <li>ABOUT</li>
@@ -24,6 +24,7 @@
             </ul>
         </nav>
     </div>
+
     <div class="base">
         <div class="slide">
             <!----<p id="par">Hello World</p>-->
